--- a/原创-归并排序【分治法的应用+有序数列组合的应用】.md
+++ b/原创-归并排序【分治法的应用+有序数列组合的应用】.md
@@ -24,6 +24,54 @@
 
  对于奇数与偶数不同的情况，是不影响的。
 
-数量为1时不进行 **mergesort 操作，**不进入循环也就不会产生多余计算。**合并大小为1的数组与大小为2的数组，是一样的。**
+数量为1时不进行 **mergesort 操作，**不进入循环也就不会产生多余计算。**合并大小为1的数组与大小为2的数组，是一样的。**  
 
- 
+
+```c++
+#include<bits/stdc++.h>
+using namespace std;
+void mergearray(int a[],int first,int mid,int last,int temp[])	//将两个有序数组合并排序 
+{
+	int i=first,j=mid+1;
+	int m=mid,n=last;
+	int k=0;
+	while(i<=m&&j<=n)
+	{
+		if(a[i]<a[j])
+			temp[k++]=a[i++];
+		else
+			temp[k++]=a[j++];
+	}
+	while(i<=m)
+		temp[k++]=a[i++];
+	while(j<=n)
+		temp[k++]=a[j++];
+	for(i=0;i<k;i++)
+		a[first+i]=temp[i];
+}
+ 
+void mergesort(int a[],int first,int last,int temp[])	//将两个任意数组合并排序 
+{
+	if(first<last)
+	{
+		int mid=(first+last)/2;
+		mergesort(a,first,mid,temp);	//左边有序 
+		mergesort(a,mid+1,last,temp);	//右边有序 
+		mergearray(a,first,mid,last,temp);	//再将两个有序数组合并 
+	}
+}
+ 
+int main()
+{
+	int a[1005];
+	int temp[1005];
+	int n;
+	scanf("%d",&n);
+	for(int i=0;i<n;i++)
+		scanf("%d",&a[i]);
+	mergesort(a,0,n-1,temp);
+	for(int i=0;i<n;i++)
+		printf("%d ",a[i]);
+}
+
+```
