--- a/原创-数据结构——大数阶乘.md
+++ b/原创-数据结构——大数阶乘.md
@@ -27,6 +27,81 @@
 （3）要求采用链式存储结构实现（普通单链表，循环单链表，普通双项链表和双向循环链表中任选一种结构）。</p>
 
 
- 
+```c++
+#include<iostream>
+#include<sstream>
+#include<string>
+using namespace std;
+/*
+第二题其实如果考虑双向链表存储的话输出会比较明了，
+从前往后输入，从后往前输出。
+但是因为有stringstream的存在，[注意输出的时候要补0]
+所以可以使得更加简便
+*/
+struct node {
+	int key;
+	node *next;
+	node(int k) {
+		key= k;//必须截断成三位数：小于1000-> k=k-(k/1000)*1000
+		next = NULL;
+	}
+};
+node *root = new node(1);
+ 
+void count(int i)
+{
+	int tmp = 0;//进位
+	node* head = root;
+	node* p=NULL;//前趋指针
+	while (head!= NULL)
+	{
+		int k = head->key;
+		k = k * i+tmp;
+		tmp = k / 1000;//进位
+		k = k - tmp* 1000;//截断
+		head->key = k;//重填
+		p = head;
+		head = head->next;
+	}
+	if (tmp != 0)//位数增加
+	{
+		node* r = new node(tmp);
+		p->next = r;
+	}
+}
+int main()
+{
+	int n;
+	cout << "请输入n：" << endl;
+	cin >> n;
+	for (int i = 1;i <= n;i++)
+	{
+		//cout << i << endl;
+		count(i);
+	}
+	string str = "";
+	while (root != NULL)
+	{
+		stringstream ss;
+		string s;
+		ss << root->key;
+		ss >> s;
+		while (s.size() < 3)
+		{
+			s = '0' + s;//补0
+		}
+		str = s + str;//在前面添加0
+		root = root->next;
+	}
+	int ii = 0;
+	while (str[ii]=='0')
+	{
+		ii++;
+	}
+	str = str.substr(ii);//去前导0
+	cout << str;
+	return 0;
+}
+```
 
  
