--- a/原创-二分查找【集成】.md
+++ b/原创-二分查找【集成】.md
@@ -22,8 +22,27 @@ leetcode参考：[Search Insert Position](https://leetcode.com/problems/search-i
 > 
 <p>A = [1,3,3,5, **7** ,7,7,7,8,14,14]<br/>
 target = 7<br/>
-return 4</p>
+return 4</p>  
 
+```c++
+
+public int binarySearchLowerBound(int[] A, int target, int n){
+    int low = 0, high = n, mid;
+    while(low <= high){
+        mid = low + (high - low) / 2;
+        if(target <= A[mid]){
+            high = mid - 1;
+        }else{
+            low = mid + 1;
+        }
+    }
+    if(low < A.length && A[low] == target)
+        return low;
+    else
+        return -1;
+}
+
+```
 
 ### 3. 查找目标值区域的右边界/查找与目标值相等的最后一个位置/查找最后一个不大于目标值数的位置
 
@@ -32,6 +51,23 @@ return 4</p>
 target = 7<br/>
 return 7</p>
 
+```c++
+public int binarySearchUpperBound(int[] A, int target, int n){
+    int low = 0, high = n, mid;
+    while(low <= high){
+        mid = low + (high - low) / 2;
+        if(target >= A[mid]){
+            low = mid + 1;
+        }else{
+            high = mid - 1;
+        }
+    }
+    if(high >= 0 && A[high] == target)
+        return high;
+    else
+        return -1;
+}
+```
 
 此题以可变形为`查找第一个大于目标值的数/查找比目标值大但是最接近目标值的数`，我们已经找到了最后一个不大于目标值的数，那么再往后进一位，返回`high + 1`，就是第一个大于目标值的数。
 
@@ -48,6 +84,19 @@ return 7</p>
 target = 7<br/>
 return 3</p>
 
+```c++
+int low = 0, high = n, mid;
+while(low <= high){
+    mid = low + (high - low) / 2;
+    if(target <= A[mid]){
+        high = mid - 1;
+    }else{
+        low = mid + 1;
+    }
+}
+return high < 0 ? -1 : high;
+```
+
 
 ### 5. 查找第一个大于目标值的数/查找比目标值大但是最接近目标值的数
 
@@ -58,6 +107,18 @@ return 3</p>
 target = 7<br/>
 return 8</p>
 
+```c++
+int low = 0, high = n, mid;
+while(low <= high){
+    mid = low + (high - low) / 2;
+    if(target >= A[mid]){
+        low = mid + 1;
+    }else{
+        high = mid - 1;
+    }
+}
+return low > n ? -1 : low;
+```
 
 ### 6. 旋转数组返回最小元素
 
@@ -68,6 +129,24 @@ return 8</p>
 Input: [3,4,5,**1**,2]<br/>
 Output: 1</p>
 
+```c++
+public int findMin(int[] nums) {
+    int len = nums.length;
+    if(len == 0)
+        return -1;
+    int left = 0, right = len - 1, mid;
+ 
+    while(left < right){
+        mid = left + (right - left) / 2;
+        if(nums[mid] > nums[right])
+            left = mid + 1;
+        else{
+            right = mid;
+        }
+    }
+    return nums[left];
+}
+```
 
 注意这里和之前的二分查找的几点区别：
 1. 循环判定条件为`left &lt; right`，没有等于号
@@ -83,6 +162,24 @@ Output: 1</p>
 Input: [2,2,2,**0**,1]<br/>
 Output: 0</p>
 
+```c++
+public int findMin(int[] nums) {
+    int len = nums.length;
+    if(len == 0)
+        return -1;
+    int left = 0, right = len - 1, mid;
+    while(left < right){
+        mid = left + (right - left) / 2;
+        if(nums[mid] > nums[right])
+            left = mid + 1;
+        else if(nums[mid] < nums[right])
+            right = mid;
+        else
+            right--;
+    }
+    return nums[left];
+}
+```
 
 和之前不存在重复项的差别是：当`nums[mid] == nums[right]`时，我们不能确定最小值在 `mid`的左边还是右边，所以我们就让右边界减一。
 
@@ -95,14 +192,99 @@ LeetCode: [Search in Rotated Sorted Array](https://leetcode.com/problems/search-
 
 
 法一：
+- 先利用方法 6.1 查找数组中的最小元素，即确定分界点的位置
+- 把旋转的数组当成偏移，用(offset + mid) % len来求真实的 mid 的位置。
+- 然后用二分查找来定位目标值
+
+```c++
+public int search(int[] nums, int target) {
+    int len = nums.length;
+    if(len == 0)
+        return -1;
+    int left = 0, right = len - 1, mid;
+    while(left < right){
+        mid = left + (right - left) / 2;
+        if(nums[mid] > nums[right])
+            left = mid + 1;
+        else
+            right = mid;
+    }
+    int offset = left;
+    left = 0;
+    right = len - 1;
+    while(left <= right){
+        mid = left + (right - left) / 2;
+        int realmid = (mid + offset) % len;
+        if(nums[realmid] == target)
+            return realmid;
+        else if(nums[realmid] < target)
+            left = mid + 1;
+        else
+            right = mid - 1;
+    }
+    return -1;
+}
+```
 
 法二：其实没有必要找到旋转数组的分界点，对于搜索左侧还是右侧我们是可以根据mid跟high的元素大小来判定出来的，直接根据target的值做二分搜索就可以了。
+```c++
+public int search(int[] nums, int target) {
+    int len = nums.length;
+    if(len == 0)
+        return -1;
+    int left = 0, right = len - 1, mid;
+    while(left <= right){
+        mid = left + (right - left) / 2;
+        if(nums[mid] == target)
+            return mid;
+        else if(nums[left] <= nums[mid]){
+            if(target < nums[mid] && target >= nums[left])
+                right = mid - 1;
+            else
+                left = mid + 1;
+        }else if(nums[mid] <= nums[right]){
+            if(target > nums[mid] && target <= nums[right])
+                left = mid + 1;
+            else
+                right = mid - 1;
+        }
+    }
+    return -1;
+}
+```
 
 7.2 存在重复项
 
 > 
 LeetCode: [Search in Rotated Sorted Array II](https://leetcode.com/problems/search-in-rotated-sorted-array-ii/)
 
+```c++
+public boolean search(int[] nums, int target) {
+    int len = nums.length;
+    if(len == 0)
+        return false;
+    int left = 0, right = len - 1, mid;
+    while(left <= right){
+        mid = left + (right - left) / 2;
+        if(nums[mid] == target)
+            return true;
+        else if(nums[mid] > nums[right]){
+            if(target < nums[mid] && target >= nums[left])
+                right = mid;
+            else
+                left = mid + 1;
+        }else if(nums[mid] < nums[right]){
+            if(target > nums[mid] && target <= nums[right])
+                left = mid + 1;
+            else
+                right = mid;
+        }else{
+            right --;
+        }   
+    }
+    return false;
+}
+```
 
 ### 8. 二维数组中的查找
 
