--- a/原创-数据结构——约瑟夫环变形.md
+++ b/原创-数据结构——约瑟夫环变形.md
@@ -18,3 +18,58 @@ m的初值为20；密码：3，1，7，2，4，8，<br/>
  循环链表
 
  
+```c++
+#include<iostream>
+using namespace std;
+ 
+struct node {
+	int key;
+	int num;
+	node *next;
+	node(int k,int i) {
+		key= k;
+		num = i;
+		next = NULL;
+	}
+};
+void dele(node *p,node*q)//p是前驱，q是被删除的
+{
+	p->next = q->next;
+	free(q);
+}
+int main()
+{
+	int m, n,t;
+	cout << "请输入m，n：" << endl;
+	cin >> m >> n;
+	cin >> t;
+	node *head = new node(t,1);//带头结点的
+	node* root = head;
+	for (int i = 1;i < n;i++)
+	{
+		cin >> t;
+		node *tmp = new node(t,i+1);
+		root->next = tmp;
+		root = tmp;
+	}
+	root->next = head;//把循环接起来
+	node* p=root;//最后一个指针
+	node* q=head;//第一个指针
+	cout << "结果为：" << endl;
+	while (n--)//报数n次
+	{
+		
+		int j = m-1;
+		while (j--)//报数到m前的一个（m-1），开始删除操作
+		{
+			p = q;
+			q = q->next;
+		}
+		m = q->key;
+		cout << q->num << " ";
+		dele(p, q);
+		q = p->next;
+	}
+	return 0;
+}
+```
