--- a/转载-全排列【转】.md
+++ b/转载-全排列【转】.md
@@ -1,5 +1,6 @@
 # 转载：全排列【转】
 
+### [链接地址](https://chenzhuo.blog.csdn.net/article/details/90383862)  
 在leetcode上刷题的时候，偶然看到一位仁兄总结的关于寻找数组的子集（78,90）、全排列（46,47）、在数组中找出等于固定值的元素的集合（39,40）、找出字符串回文子串的集合（131），感觉很惊喜，所以搬运到这里分享给大家，下边是原文链接，里面也有很多讨论。https://discuss.leetcode.com/topic/46161/a-general-approach-to-backtracking-questions-in-java-subsets-permutations-combination-sum-palindrome-partitioning/2
 
       里面比较难想的部分（对于我这种只捡easy模式的题目做的算法小白）是循环里面的递归，每次退栈的时候，会从cur中remove一个元素出来，然后i要加1，继续循环！！，而且一定要弄清楚退栈后i的值是多少。建议大家拿比较简单的{1，2，3}来跟着程序走一遍，能充分的说明问题，如果实在不能理解一层层递归中的各个变量的值的变化，建议在eclipse中，自己打断点，一步步走，观测各个值的变化。
